--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.9.15",
-    "multiparty": "^4.2.1"
+    "multiparty": "^4.2.1",
+    "socket.io": "^2.3.0"
   }
 }
